--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "@supabase/ssr": "^0.8.0",
         "@supabase/supabase-js": "^2.89.0",
         "@tanstack/react-table": "^8.21.3",
+        "ajv": "^8.17.1",
         "axios": "^1.10.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
